[build-system]
requires = [
    "setuptools>=62",
    "wheel",
    "setuptools_scm[toml]>=6.4",
    "oldest-supported-numpy",
    "Cython>=0.28.3,<3.0",
    "extension-helpers",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.7"
name = "gstools"
description = "GSTools: A geostatistical toolbox."
authors = [
    {name = "Sebastian M端ller, Lennart Sch端ler", email = "info@geostat-framework.org"},
]
maintainers = [
    {name = "Sebastian M端ller, Lennart Sch端ler", email = "info@geostat-framework.org"},
]
readme = "README.md"
license = {text = "LGPL-3.0"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]
dependencies = [
    "emcee>=3.0.0",
    "hankel>=1.0.0",
    "meshio>=5.1.0",
    "numpy>=1.14.5",
    "pyevtk>=1.1.1",
    "scipy>=1.1.0",
]

[project.optional-dependencies]
doc = [
    "m2r2>=0.2.8",
    "matplotlib>=3",
    "meshzoo>=0.7",
    "numpydoc>=1.1",
    "pykrige>=1.5,<2",
    "pyvista>=0.29",
    "sphinx>=4",
    "sphinx-gallery>=0.8",
    "sphinx-rtd-theme>=1",
    "sphinxcontrib-youtube>=1.1",
]
plotting = [
    "matplotlib>=3",
    "pyvista>=0.29",
]
rust = ["gstools_core>=0.2.0,<1"]
test = ["pytest-cov>=3"]

[project.urls]
Changelog = "https://github.com/GeoStat-Framework/GSTools/blob/main/CHANGELOG.md"
Conda-Forge = "https://anaconda.org/conda-forge/gstools"
Documentation = "https://gstools.readthedocs.io"
Homepage = "https://geostat-framework.org/#gstools"
Source = "https://github.com/GeoStat-Framework/GSTools"
Tracker = "https://github.com/GeoStat-Framework/GSTools/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "src/gstools/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79
target-version = [
    "py36",
    "py37",
    "py38",
]

[tool.coverage]
    [tool.coverage.run]
    source = ["gstools"]
    omit = [
        "*docs*",
        "*examples*",
        "*tests*",
        "*/src/gstools/covmodel/plot.py",
        "*/src/gstools/field/plot.py",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "def __repr__",
        "def __str__",
    ]

[tool.pylint]
    [tool.pylint.main]
    extension-pkg-whitelist = [
        "numpy",
        "scipy",
        "gstools_core",
    ]
    ignore = "_version.py"
    load-plugins = [
        "pylint.extensions.no_self_use",
    ]

    [tool.pylint.message_control]
    disable = [
        "R0801",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.design]
    max-args = 20
    max-locals = 50
    max-branches = 30
    max-statements = 80
    max-attributes = 25
    max-public-methods = 75

[tool.cibuildwheel]
# Switch to using build
build-frontend = "build"
# Disable building PyPy wheels on all platforms, 32bit for py3.10 and musllinux builds, py3.6
skip = ["cp36-*", "pp*", "cp310-win32", "cp310-manylinux_i686", "*-musllinux_*"]
# Run the package tests using `pytest`
test-extras = "test"
test-command = "pytest -v {package}/tests"
# Skip trying to test arm64 builds on Intel Macs
test-skip = "*-macosx_arm64 *-macosx_universal2:arm64"
# no wheels for linux-32bit anymore for numpy>=1.22
environment = "PIP_PREFER_BINARY=1"
