[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=7",
    "numpy>=2.0.0rc1,<2.3; python_version >= '3.9'",
    "oldest-supported-numpy; python_version < '3.9'",
    "Cython>=3.0.10,<3.1.0",
    "extension-helpers>=1",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "gstools"
description = "GSTools: A geostatistical toolbox."
authors = [
    {name = "Sebastian Müller, Lennart Schüler", email = "info@geostat-framework.org"},
]
readme = "README.md"
license = {text = "LGPL-3.0"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]
dependencies = [
    "emcee>=3.0.0",
    "hankel>=1.0.0",
    "meshio>=5.1.0",
    "numpy>=1.20.0",
    "pyevtk>=1.1.1",
    "scipy>=1.1.0",
]

[project.optional-dependencies]
doc = [
    "m2r2>=0.2.8",
    "matplotlib>=3.7",
    "meshzoo>=0.7",
    "numpydoc>=1.1",
    "pykrige>=1.5,<2",
    "pyvista>=0.40",
    "sphinx>=7",
    "sphinx-gallery>=0.8",
    "sphinx-rtd-theme>=2",
    "sphinxcontrib-youtube>=1.1",
]
plotting = [
    "matplotlib>=3.7",
    "pyvista>=0.40",
]
rust = ["gstools_core>=0.2.0,<1"]
test = ["pytest-cov>=3"]
lint = [
    "black>=24",
    "pylint",
    "isort[colors]",
    "cython-lint",
]

[project.urls]
Changelog = "https://github.com/GeoStat-Framework/GSTools/blob/main/CHANGELOG.md"
Conda-Forge = "https://anaconda.org/conda-forge/gstools"
Documentation = "https://gstools.readthedocs.io"
Homepage = "https://geostat-framework.org/#gstools"
Source = "https://github.com/GeoStat-Framework/GSTools"
Tracker = "https://github.com/GeoStat-Framework/GSTools/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "src/gstools/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
]

[tool.coverage]
    [tool.coverage.run]
    source = ["gstools"]
    omit = [
        "*docs*",
        "*examples*",
        "*tests*",
        "*/src/gstools/covmodel/plot.py",
        "*/src/gstools/field/plot.py",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "def __repr__",
        "def __str__",
    ]

[tool.pylint]
    [tool.pylint.main]
    extension-pkg-whitelist = [
        "numpy",
        "scipy",
        "gstools_core",
    ]
    ignore = "_version.py"
    load-plugins = [
        "pylint.extensions.no_self_use",
    ]

    [tool.pylint.message_control]
    disable = [
        "R0801",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.design]
    max-args = 20
    max-locals = 50
    max-branches = 30
    max-statements = 85
    max-attributes = 25
    max-public-methods = 80

[tool.cibuildwheel]
# Switch to using build
build-frontend = "build"
# Disable building PyPy wheels on all platforms, 32bit for py3.10/11/12, musllinux builds, py3.6/7
skip = ["cp36-*", "cp37-*", "pp*", "*-win32", "*-manylinux_i686", "*-musllinux_*"]
# Run the package tests using `pytest`
test-extras = "test"
test-command = "pytest -v {package}/tests"
