[metadata]
name = gstools
description = GSTools: A geostatistical toolbox.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GeoStat-Framework/GSTools
author = Sebastian M端ller, Lennart Sch端ler
author_email = info@geostat-framework.org
maintainer = Sebastian M端ller, Lennart Sch端ler
maintainer_email = info@geostat-framework.org
license = LGPL-3.0
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
project_urls =
    Documentation = https://gstools.readthedocs.io
    Source = https://github.com/GeoStat-Framework/GSTools
    Tracker = https://github.com/GeoStat-Framework/GSTools/issues
    Changelog = https://github.com/GeoStat-Framework/GSTools/blob/develop/CHANGELOG.md
    Conda-Forge = https://anaconda.org/conda-forge/gstools

[options]
packages = find:
install_requires =
    emcee>=3.0.0,<4
    hankel>=1.0.2,<2
    meshio>=4.0.3,<5.0
    numpy>=1.14.5,<2
    pyevtk>=1.1.1,<2
    scipy>=1.1.0,<2
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    m2r2
    matplotlib>=3
    meshzoo
    numpydoc>=1.1
    pykrige>=1.5
    pyvista
    sphinx>=3
    sphinx-gallery>=0.8
    sphinx-rtd-theme>=0.5
plotting =
    matplotlib
    pyvista
test =
    coverage[toml]>=5.2.1
    pytest>=6.0
    pytest-cov>=2.11.0
